fix: vertically balance spacing

--- a/src/components/HomepageHero.module.css
+++ b/src/components/HomepageHero.module.css
@@ -7,7 +7,7 @@
   background-color: #74295f;
   color: white;
   margin-block-end: 48px;
-  padding-block-start: 80px;
+  padding-block: 80px;
 }
 
 .homepage-hero__container {
